header - bug fix for overlapping modals

--- a/webapp/sass/theme/header.scss
+++ b/webapp/sass/theme/header.scss
@@ -5,7 +5,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 99999;
+  z-index: 999;
 }
 
 /* dropdown menu */
